--- a/templates/results.html
+++ b/templates/results.html
@@ -11,7 +11,7 @@
 
     <h4>Search results</h4>
 
-    <table>
+    <table> <!--return the result of  search function-->
         {% for Restaurant in results %}
             <section>
                 <p class="center">
