--- a/templates/searchresult.html
+++ b/templates/searchresult.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load staticfiles %} <!--return the ajax search function -->
 {% if RestaurantList %}
             {% for Restaurant in RestaurantList %}
                 {% if Restaurant.status != 0 %}
