--- a/templates/Restaurant_Editor.html
+++ b/templates/Restaurant_Editor.html
@@ -15,9 +15,9 @@ Current Photo:<br>
 New: <input type="file" name="photo" accept="image/*"><br>
 <table >
  <tr>
- 	<td>Category<td>
- 	<td>Current<td>
- 	<td>New<td>
+ 	<td>Category<td> <!--type-->
+ 	<td>Current<td> <!--value currently-->
+ 	<td>New<td> <!--new value want to change-->
  </tr>
   <tr>
  	<td>Name<td>
@@ -25,7 +25,7 @@ New: <input type="file" name="photo" accept="image/*"><br>
  	<td><input type="text" name="name" width="48" size="50" value='{{ RestaurantList.name }}' required/><td>
  </tr>
   <tr>
- 	<td>Cuisine<td>
+ 	<td>Cuisine<td> <!--cuisine select box-->
  	<td>{{ RestaurantList.get_cuisine_display }}<td>
  	<td><select name="cuisine">
   <option value ='WE'>Western</option>
@@ -34,12 +34,12 @@ New: <input type="file" name="photo" accept="image/*"><br>
 </select><td>
  </tr>
   <tr>
- 	<td>Address<td>
+ 	<td>Address<td> <!--adress text box-->
  	<td>{{ RestaurantList.streetAddress }}<td>
  	<td><input type="text" name="address" width="48" size="50" value='{{ RestaurantList.streetAddress }}' required /><td>
  </tr>
    <tr>
- 	<td>Price Rang<td>
+ 	<td>Price Rang<td> <!--select box price range-->
  	<td>{{ RestaurantList.get_priceRange_display }}<td>
  	<td><select name="Price">
  	<option value =0>Not Rated</option>
@@ -48,12 +48,12 @@ New: <input type="file" name="photo" accept="image/*"><br>
   <option value=3>Fancy</option></select><td>
  </tr>
    <tr>
- 	<td>OpeningHour<td>
+ 	<td>OpeningHour<td> <!--open hour-->
  	<td>{{ RestaurantList.openingHour }}<td>
  	<td><input type="text" name="OH" width="48" size="50" required value='{{ RestaurantList.openingHour }}'/><td>
  </tr>
    <tr>
- 	<td>Status:<td>
+ 	<td>Status:<td> <!--text status-->
  	<td>{{ Restaurant.get_status_display }}<td>
  	<td><select name="status">
  	<option value =1>Open</option>
