--- a/templates/addRestaurant.html
+++ b/templates/addRestaurant.html
@@ -17,13 +17,13 @@
                     <td>
                     <td>
                 </tr>
-                <tr>
+                <tr> <!--name-->
                     <td>Name
                     <td>
                     <td><input type="text" name="name" width="48" size="50" value='{{ RestaurantList.name }}' required/>
                     <td>
                 </tr>
-                <tr>
+                <tr> <!--cuisine-->
                     <td>Cuisine
                     <td>
                     <td><select name="cuisine">
@@ -35,14 +35,14 @@
                 </tr>
                 <tr>
                     <td>Address
-                    <td>
+                    <td> <!--adress-->
                     <td><input type="text" name="address" width="48" size="50"
                                value='{{ RestaurantList.streetAddress }}' required/>
                     <td>
                 </tr>
                 <tr>
                     <td>Price Rang
-                    <td>
+                    <td> <!--price select box-->
                     <td><select name="Price">
                         <option value=0>Not Rated</option>
                         <option value=1>Low Price</option>
@@ -51,14 +51,14 @@
                     </select>
                     <td>
                 </tr>
-                <tr>
+                <tr> <!--input opning hours-->
                     <td>OpeningHour
                     <td>
                     <td><input type="text" name="OH" width="48" size="50" required
                                value='{{ RestaurantList.openingHour }}'/>
                     <td>
                 </tr>
-                <tr>
+                <tr> <!--select status--> <!--0- deleted only allow to mark in admin page-->
                     <td>Status:
                     <td>
                     <td><select name="status">
