--- a/templates/base.html
+++ b/templates/base.html
@@ -8,30 +8,8 @@
     </title>
     {% block head_block %}
     {% endblock %}
-    <script type="text/javascript">
-        function showHint(str) {
-            var xmlhttp;
-            if (str.length == 0) {
-                document.getElementById("txtHint").innerHTML = "";
-                return;
-            }
-            if (window.XMLHttpRequest) {// code for IE7+, Firefox, Chrome, Opera, Safari
-                xmlhttp = new XMLHttpRequest();
-            }
-            else {// code for IE6, IE5
-                xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
-            }
-            xmlhttp.onreadystatechange = function () {
-                if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
-                    document.getElementById("txtHint").innerHTML = xmlhttp.responseText;
-                }
-                else {
-                    document.getElementById("txtHint").innerHTML = "Fail";
-                }
-            }
-            xmlhttp.open("GET", "search/" + str, true);
-            xmlhttp.send();
-        }
+    <script src="{% static "js/search.js" %}">
+
     </script>
 </head>
 <body class="global"> <!--search bar-->
