--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,7 @@
     </title>
     {% block head_block %}
     {% endblock %}
-    <script src="{% static "js/search.js" %}">
-
-    </script>
+    <script src="{% static "js/search.js" %}"></script>
 </head>
 <body class="global"> <!--search bar-->
 <div style="position: relative;margin-bottom: 250px;width: 100%;display:block;">
